@@ -1,16 +1,18 @@
 // depreciation example - sun.misc.BASE64Encoder;
 package com.amazonaws.samples.appconfig.utils;
-import sun.misc.BASE64Encoder;
 
+import java.util.Base64;
+import java.time.LocalDate;
+import java.time.ZoneId;
 import java.util.Date;
 
 
 public class Encoder {
 
-    Date defaultDate = new Date(1999, 0, 1);
+    Date defaultDate = Date.from(LocalDate.of(1999, 1, 1).atStartOfDay(ZoneId.systemDefault()).toInstant());
 
     byte[] bytes = new byte[57];
-    String enc1 = new sun.misc.BASE64Encoder().encode(bytes);
+    String enc1 = Base64.getEncoder().encodeToString(bytes);
 
 
 }
